@startuml
' --- CẤU HÌNH GIAO DIỆN ---
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
scale 0.9

' QUAN TRỌNG: Ép sơ đồ trải theo chiều ngang
left to right direction

' ==========================================
' NHÓM 1 (BÊN TRÁI): CÔNG CỤ ĐO LƯỜNG & CHẠY
' ==========================================
package "1. CÔNG CỤ ĐO LƯỜNG" {
    class Program <<static>> {
        - {static} Main() : void
    }

    class DataGenerator <<static>> {
        + {static} TaoStackNgauNhien(size : int) : MyStack<int>
        + {static} TaoStackTangDan(size : int) : MyStack<int>
        + {static} TaoStackGiamDan(size : int) : MyStack<int>
    }

    class Timing {
        - startingTime : TimeSpan
        - duration : TimeSpan
        + Timing()
        + startTime() : void
        + StopTime() : void
        + Result() : TimeSpan
    }

    abstract class TimeAnalyzer {
        # n : int
        # TimeAnalyzer(n : int)
        # Measure(action : Action) : double[]
        # Mean(data : double[]) : double
        # Variance(data : double[], mean : double) : double
        # PrintResult(name : string, times : double[]) : void
    }

    class TimeSort {
        - size : int
        + TimeSort(n : int, size : int)
        + RunAll() : void
        - RunCase(title, generator) : void
    }

    class TimeSearch {
        - size : int
        + TimeSearch(n : int, size : int)
        + Run() : void
    }

    ' Quan hệ kế thừa & sử dụng
    TimeAnalyzer <|-- TimeSort
    TimeAnalyzer <|-- TimeSearch
    TimeAnalyzer ..> Timing
}
package "2. THUẬT TOÁN VÀ ỨNG DỤNG" {
    
    ' --- THUẬT TOÁN ---
    class ThuanToanSapXep {
        + {static} InsertionSort<T>(stack) : void
        + {static} SelectionSort<T>(stack) : void
        + {static} MergeSort<T>(stack) : MyStack<T>
        - {static} Merge<T>(left, right) : MyStack<T>
    }

    class ThuatToanTimKiem {
        ' Container class
    }
    
    class "BFSFinder<T>" {
        - chieuVao : MyStack<T>
        - chieuRa : MyStack<T>
        + Search(origin, target) : bool
    }
    
    class "DFSFinder<T>" {
        + Search(origin, target) : bool
    }

    class "LinearSearchFinder<T>" {
        + Search(origin, target) : bool
    }
    
    ThuatToanTimKiem +-- "BFSFinder<T>"
    ThuatToanTimKiem +-- "DFSFinder<T>"
    ThuatToanTimKiem +-- "LinearSearchFinder<T>"

    ' --- THÁP HÀ NỘI ---
    class HanoiUsingStack {
        - src : MyStack<int>
        - aux : MyStack<int>
        - dest : MyStack<int>
        + Steps : List<string>
        + Moves : List<Move>
        + HanoiUsingStack()
        - Init(n : int) : void
        - Log(message : string) : void
        - AddMove(from, to, disk) : void
        - MoveDisk(from, to, fromName, toName) : void
        + SolveIterative(n : int) : void
    }

    class Move {
        + From : char
        + To : char
        + Disk : int
        + Move(from, to, disk)
        + ToString() : string
    }
    
    HanoiUsingStack ..> Move

    ' --- ĐỘ ỔN ĐỊNH ---
    class StableItem {
        + Value : int
        + OriginalIndex : int
        + CompareTo(other) : int
    }

    class StabilityEvaluation {
        - {static} rnd : Random
        - {static} CreateTestStack()
        - {static} IsStable(stack)
        + {static} Evaluate(n)
    }
    
    StabilityEvaluation ..> StableItem
}
package "3. CÀI ĐẶT" {
    class "MyStack<T>" {
        - items : T?[]
        - top : int
        + Capacity : int <<get>>
        + MyStack(capacity : int)
        + Push(item : T) : void
        + Pop() : T
        + Peek() : T
        + IsEmpty() : bool
        + IsFull() : bool
        + Count() : int
        + Clear() : void
        + ToArray() : T[]
        + Contains(item) : bool
        + Display() : void
    }

    interface "ITraversable<T>" {
        + HasNext() : bool
        + Next() : T
    }

    class "ArrayTraversable<T>" {
        - data : T[]
        - index : int
        + ArrayTraversable(data)
        + HasNext() : bool
        + Next() : T
    }

    "ITraversable<T>" <|.. "ArrayTraversable<T>"
}
' Nhóm 1 gọi Nhóm 2
TimeSort ..> ThuanToanSapXep
TimeSearch ..> ThuatToanTimKiem
Program ..> TimeSort
Program ..> TimeSearch
Program ..> HanoiUsingStack
DataGenerator ..> "MyStack<T>" : tạo

' Nhóm 2 gọi Nhóm 3
ThuanToanSapXep ..> "MyStack<T>"
"BFSFinder<T>" --> "MyStack<T>" : dùng 2 stack
"BFSFinder<T>" ..> "ITraversable<T>"
HanoiUsingStack --> "MyStack<T>" : dùng 3 cọc
StabilityEvaluation ..> "MyStack<T>"
StabilityEvaluation ..> ThuanToanSapXep

@enduml
